<resources>
    <string name="app_name">FS_CollegeTransportTask</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="theory_1">Транспортная задача (задача Монжа - Канторовича) - математическая задача линейного программирования специального вида о поиске оптимального распределения однородных объектов из аккумулятора к приемникам с минимизацией затрат на перемещение. Для простоты понимания рассматривается как задача об оптимальном плане перевозок грузов из пунктов отправления (например, складов) в пункты потребления (например, магазины), с минимальными общими затратами на перевозки. Математическая модель транспортной задачи имеет следующий вид:</string>
    <string name="theory_2">где: Z - затраты на перевозку грузов;</string>
    <string name="theory_3">X - объем груза;</string>
    <string name="theory_4">C - стоимость (тариф) перевозки единицы груза;</string>
    <string name="theory_5">A - запас поставщика;</string>
    <string name="theory_6">B - запрос потребителя;</string>
    <string name="theory_7">m - число поставщиков;</string>
    <string name="theory_8">n - число потребителей.</string>
    <string name="theory_9">Общий план решения транспортной задачи методом потенциалов</string>
    <string name="theory_10">1. Построение транспортной таблицы.</string>
    <string name="theory_11">2. Проверка задачи на закрытость.</string>
    <string name="theory_12">3. Составление опорного плана.</string>
    <string name="theory_13">4. Проверка опорного плана на вырожденность.</string>
    <string name="theory_14">5. Вычисление потенциалов для плана перевозки.</string>
    <string name="theory_15">6. Проверка опорного плана на оптимальность.</string>
    <string name="theory_16">7. Перераспределение поставок.</string>
    <string name="theory_17">8. Если оптимальное решение найдено, переходим к п. 9, если нет – к п. 5.</string>
    <string name="theory_18">9. Вычисление общих затрат на перевозку груза.</string>
    <string name="theory_19">1. Построение транспортной таблицы</string>
    <string name="theory_20">Строим таблицу, где указываем запасы материалов, имеющиеся на складах поставщиков (Ai), и потребности заводов (Bj) в этих материалах. В нижний правый угол ячеек таблицы заносим значение тарифов на перевозку груза (Cij).</string>
    <string name="theory_21">2. Проверка задачи на закрытость</string>
    <string name="theory_22">Обозначим суммарный запас груза у всех поставщиков символом A, а суммарную потребность в грузе у всех потребителей – символом B. Тогда:</string>
    <string name="theory_23">3. Составление опорного плана</string>
    <string name="theory_24">Клетки таблицы, в которые записаны отличные от нуля перевозки, называются базисными, а остальные (пустые) - свободными. План называется вырожденным, если количество базисных клеток в нем меньше, чем m + n -1. Если во время решения задачи получился вырожденный план, то его необходимо пополнить, проставив в недостающем числе клеток нулевую перевозку и превратив, тем самым, эти клетки в базисные (общий баланс и суммарная стоимость перевозок плана при этом не изменятся). Однако проводить пополнение плана, выбирая клетки произвольно, нельзя. План должен быть ациклическим! План называется ациклическим, если его базисные клетки не содержат циклов. Циклом в транспортной таблице называется несколько клеток, соединенных замкнутой ломаной линией так, чтобы две соседние вершины ломаной были расположены либо в одной строке, либо в одном столбце. Ниже приведен пример цикла:</string>
    <string name="theory_25">Ломаная линия может иметь точки самопересечения, но не в клетках цикла. Кол-во базисных клеток = 5 m + n – 1 = 3 + 3 – 1 = 5 Следовательно, первоначальный план перевозок – невырожденный.</string>
    <string name="theory_26">5. Вычисление потенциалов для плана перевозки</string>
    <string name="theory_27">Для анализа полученных планов и их последующего улучшения удобно ввести дополнительные характеристики пунктов отправления и назначения, называемые потенциалами. Этот метод улучшения плана перевозок называется методом потенциалов. Есть другие методы итерационного улучшения плана перевозок, но здесь мы их рассматривать не будем. Итак, сопоставим каждому поставщику Ai и каждому потребителю Bj величины Ui и Vj соответственно так, чтобы для всех базисных клеток плана было выполнено соотношение: Ui + Vj = Cij Добавим к транспортной таблице дополнительную строку и столбец для Ui и Vj.</string>
    <string name="theory_28">Предположим, что U1 = 0.</string>
    <string name="theory_29">Тогда мы сможем найти V3 = C13 – U1 = 1 – 0 = 1.</string>
    <string name="theory_30">Зная V3, мы теперь можем найти U3:</string>
    <string name="theory_31">По аналогии вычисляем все оставшиеся потенциалы:</string>
    <string name="theory_32">Для каждой свободной клетки плана вычислим разности ΔCij = Cij – (Ui + Vj ) и запишем полученные значения в левых нижних углах соответствующих ячеек.</string>
    <string name="theory_33"><![CDATA[План является оптимальным, если все разности ΔCij ≥ 0. В данном случае план – неоптимальный (ΔC22 < 0), и его следует улучшить путем перераспределения поставок.]]></string>
    <string name="theory_34">7. Перераспределение поставок</string>
    <string name="theory_35">Найдем ячейку с наибольшей по абсолютной величине отрицательной разностью ΔCij и построим цикл, в котором кроме этой клетки все остальные являются базисными. Такой цикл всегда существует и единственен.</string>
    <string name="theory_36">Отметим ячейку с отрицательной разностью ΔCij знаком «+», следующую знаком «-», и так далее, поочередно. Затем находим минимальной значение груза в ячейках цикла имеющих знак «-» (здесь это 5) и вписываем его в свободную ячейку со знаком «+». Затем последовательно обходим все ячейки цикла, поочередно вычитая и прибавляя к ним минимальное значение (в соответствии со знаками, которыми эти ячейки помечены: где минус - вычитаем, где плюс - прибавляем).</string>
    <string name="theory_37">Получим новый опорный план перевозок:</string>
    <string name="theory_38">Так как базисных клеток стало больше, чем m + n – 1, то базисную клетку с нулевым значением делаем свободной:</string>
    <string name="theory_39">Снова вычисляем значения потенциалов и разности ΔCij:</string>
    <string name="theory_40">На этот раз все разности ΔCij ячеек положительные, следовательно, найдено оптимальное решение.</string>
    <string name="theory_41">8. Если оптимальное решение найдено, переходим к п. 9, если нет – к п. 5.</string>
    <string name="theory_42">У нас оптимальное решение найдено, поэтому переходим к пункту 9.</string>
    <string name="theory_43">9. Вычисление общих затрат на перевозку груза</string>
    <string name="theory_44">Вычислим общие затраты на перевозку груза (Z), соответствующие найденному нами оптимальному плану, по формуле:</string>
    <string name="theory_45">Zmin = 10 ∙ 1 + 15 ∙ 3 + 5 ∙ 2 + 15 ∙ 1 + 15 ∙ 2 = 110 ден. ед. Общие затраты на доставку всей продукции, для оптимального решения, составляют 110 ден. ед.</string>
    <string name="theory_46">6. Проверка плана на оптимальность методом потенциалов</string>
    <string name="theory_47">Составляет предварительный (опорный) план перевозок. Он не обязательно должен быть оптимальный. Это просто своеобразный «черновик», «набросок», улучшая который мы постепенно придем к плану оптимальному.</string>
    <string name="theory_48">4. Проверка опорного плана на вырожденность</string>
    <string name="help_1">Построение транспортной таблицы</string>
    <string name="help_2">Вначале нужно выбрать число поставщиков (Уголь) и потребителей (Завод), чтобы построить стоимость (Тариф) перевозки.</string>
    <string name="help_3">Нужно записать сколько всего тон угля в каждом из шахт и нужно записать сколько потребностей нужно перевезти на завод по переработке угля.</string>
    <string name="help_4">Теперь нужно указать тариф перевозки.</string>
    <string name="help_5">Готовое решение</string>
    <string name="help_6">Первый ответ будет не оптимальным и покажет, сколько осталось угля (В случае нехватки). Позже можно сделать tap по кнопке «Оптимизировать» и узнать оптимальное решение перевозки груза.</string>
    <string name="main_1">Решить</string>
    <string name="main_2">Теория</string>
    <string name="main_3">Помощь</string>
    <string name="main_4">О программе</string>
    <string name="begin_1">Продолжить</string>
    <string name="fin_1">Оптимизировать</string>
    <string name="fill1_1"><![CDATA[Далее >>]]></string>
    <string name="fill2_1">Узнать ответ</string>
    <string name="opt_1">Оптимальный ответ</string>
</resources>
