<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context="com.example.fromsi.fs_collegetransporttask.Help">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/sc1" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_3"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="250dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/sc2" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_4"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/sc3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_6"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/sc4" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
